# Oracle-Fusion-Dashboard-for-PO-using-AI-agents

./: README.md
backend/: .env.example  README.md  api.py  main_call.py  main_test.py  pyproject.toml  requirements.txt  testing.ipynb
backend/api_calls/: api_calls.py
backend/functions/: tool_functions.py
backend/llm_call/: llm_calls.py
backend/mappers/: final_result_mappers.py  tool_mappers.py
backend/prompts/: prompts.py
backend/schema/: pydantic_schema.py
backend/tool_calls/: tool_calls.py
backend/utils/: utils.py
frontend/: .env.example  README.md  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  LoadingMessage.tsx  Sidebar.tsx
