[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-core>=1.2.31",
    "langchain-openai>=1.1.14",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
